vercel json cart route added

--- a/vercel.json
+++ b/vercel.json
@@ -59,6 +59,14 @@
       "dest": "index.js"
     },
     {
+      "src": "/cart",
+      "dest": "index.js"
+    },
+    {
+      "src": "/cart/(.*)",
+      "dest": "index.js"
+    },
+    {
       "src": "/webhook",
       "dest": "index.js"
     },
